--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "app:setup": "pnpm install && npx husky install",
+    "setup": "pnpm install && npx husky install",
     "dev": "next dev",
     "lint": "next lint",
     "test": "ls",
@@ -16,12 +16,22 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.4.12",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "postcss": "8.4.27",
