--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "setup": "pnpm install && npx husky install",
     "dev": "next dev",
     "lint": "next lint",
-    "test": "ls",
+    "test": "npx jest --passWithNoTests",
+    "test:watch": "npx jest --watch --passWithNoTests",
     "build": "next build",
     "start": "next start"
   },
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -34,6 +37,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sonarjs": "^0.19.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
     "postcss": "8.4.27",
     "prettier": "^3.0.1",
