feat(test): additional configuration for testing and initial test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,15 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": [
+      "cypress",
+      "node"
+    ],
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./src/types/global.d.ts"
+    ]
   },
   "include": [
     "next-env.d.ts",
