--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "nextjs-template",
-  "description": "This is a base template setup that I follow in setting up a Next.js & Tailwindcss project",
+  "description": "This is a base template setup that I follow in setting up a Next.js & TailwindCSS project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "setup": "pnpm install && npx husky install",
+    "configure": "pnpm install && husky",
     "dev": "next dev",
     "lint": "next lint",
-    "test": "npx jest --passWithNoTests",
-    "test:watch": "npx jest --watch --passWithNoTests",
+    "test": "pnpm jest --passWithNoTests",
+    "test:coverage": "pnpm jest --passWithNoTests --coverage",
+    "test:watch": "pnpm jest --watch --passWithNoTests",
     "cypress:open": "npx cypress open",
     "build": "next build",
     "start": "next start"
@@ -17,9 +18,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.274.0",
-    "next": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -28,29 +29,18 @@
     "@commitlint/config-conventional": "^17.6.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "^10.4.16",
     "cypress": "^13.6.0",
-    "eslint": "8.46.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.4.12",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-sonarjs": "^0.19.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
     "postcss": "8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.1.6"
   }
 }
