--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,44 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.7.1/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"linter": {
+	"formatter": {
 		"enabled": true,
-		"rules": {
+		"formatWithErrors": false,
+		"indentStyle": "space",
+		"indentWidth": 4,
+		"lineEnding": "lf",
+		"lineWidth": 120,
+		"attributePosition": "auto",
+		"ignore": [
+			"**/.next",
+			"**/.cache",
+			"**/package-lock.json",
+			"**/public",
+			"**/node_modules",
+			"**/next-env.d.ts",
+			"**/next.config.ts",
+			"**/yarn.lock"
+		]
+	},
+	"organizeImports": { 
+		"enabled": true 
+	},
+	"linter": { 
+		"enabled": true, 
+		"rules": { 
 			"recommended": true
+		} 
+	},
+	"javascript": {
+		"formatter": {
+			"jsxQuoteStyle": "double",
+			"quoteProperties": "asNeeded",
+			"trailingComma": "es5",
+			"semicolons": "always",
+			"arrowParentheses": "asNeeded",
+			"bracketSpacing": true,
+			"bracketSameLine": false,
+			"quoteStyle": "single",
+			"attributePosition": "auto"
 		}
 	}
 }
