--- a/biome.json
+++ b/biome.json
@@ -19,14 +19,12 @@
 			"**/yarn.lock"
 		]
 	},
-	"organizeImports": { 
-		"enabled": true 
-	},
-	"linter": { 
-		"enabled": true, 
-		"rules": { 
+	"organizeImports": { "enabled": true },
+	"linter": {
+		"enabled": true,
+		"rules": {
 			"recommended": true
-		} 
+		}
 	},
 	"javascript": {
 		"formatter": {
@@ -40,5 +38,45 @@
 			"quoteStyle": "single",
 			"attributePosition": "auto"
 		}
-	}
+	},
+	"overrides": [
+		{
+			"include": ["*.tsx", "*.ts"],
+			"linter": {
+				"rules": { "correctness": { "noUndeclaredVariables": "off" } }
+			}
+		},
+		{
+			"include": ["*.ts", "*.tsx", "*.mts", "*.cts"],
+			"linter": {
+				"rules": {
+					"correctness": {
+						"noConstAssign": "off",
+						"noGlobalObjectCalls": "off",
+						"noInvalidConstructorSuper": "off",
+						"noNewSymbol": "off",
+						"noSetterReturn": "off",
+						"noUndeclaredVariables": "off",
+						"noUnreachable": "off",
+						"noUnreachableSuper": "off"
+					},
+					"style": {
+						"noArguments": "error",
+						"noVar": "error",
+						"useConst": "error"
+					},
+					"suspicious": {
+						"noDuplicateClassMembers": "off",
+						"noDuplicateObjectKeys": "off",
+						"noDuplicateParameters": "off",
+						"noFunctionAssign": "off",
+						"noImportAssign": "off",
+						"noRedeclare": "off",
+						"noUnsafeNegation": "off",
+						"useGetterReturn": "off"
+					}
+				}
+			}
+		}
+	]
 }
